# riksdagen-api

./: README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: lint_python.yml
models/: dokument.py  dokumentlista.py  riksdagen.py
riksdagenapi/: dokumentlista.py  riksdagen.py
src/: __init__.py  dokumentlista.py  exceptions.py
src/models/: dokument.py  dokumentlista.py  exceptions.py  riksdagen.py
tests/: test_riksdagen.py
