[tool.poetry]
name = "riksdagenapi"
version = "0.0.3"
description = "Libray for accessing the Riksdagen API"
#author_email = "dp_public@riseup.net"
#long_description = "file: README.md"
#long_description_content_type = "text/markdown"
keywords = ["riksdagen", "swedish parliament", "parliament", "open data"]
authors = ["Dennis Priskorn"]
packages = [{include = "src"}]
license = "GPLv3+"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.4"
requests = "^2.28.2"
rich = "^13.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
