[metadata]
name = riksdagen-api
version = 0.0.1
author = Dennis Priskorn
author_email = dp_public@riseup.net
description = Libray for accessing the Riksdagen API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dpriskorn/riksdagen-api
project_urls =
    Bug Tracker = https://github.com/dpriskorn/riksdagen-api/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src