[metadata]
name = riksdagenapi
version = 0.0.2
author = Dennis Priskorn
author_email = dp_public@riseup.net
description = Libray for accessing the Riksdagen API
long_description = file: README.md
long_description_content_type = text/markdown
keywords = riksdagen
url = https://github.com/dpriskorn/riksdagen-api
project_urls =
    Bug Tracker = https://github.com/dpriskorn/riksdagen-api/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Intended Audience :: Developers
    Topic :: Utilities
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = riksdagenapi
python_requires = >=3.6